// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteAccount should match default section snapshot 1`] = `
<div>
  <h2
    className="section-heading h4 mb-3"
  >
    Delete My Account
  </h2>
  <p>
    We're sorry to see you go!
  </p>
  <p>
    Please note: Deletion of your account and personal data is permanent and cannot be undone. localhost will not be able to recover your account or the data that is deleted.
  </p>
  <p>
    Once your account is deleted, you cannot use it to take courses on localhost.
  </p>
  <p>
    You may also lose access to verified certificates and other program credentials. You can make a copy of these for your records before proceeding with deletion.
  </p>
  <p
    className="text-danger h6"
  >
    Warning: Account deletion is permanent. Please read the above carefully before proceeding. This is an irreversible action, and you will no longer be able to use the same email on localhost.
  </p>
  <p>
    <a
      className="pgn__hyperlink default-link standalone-link"
      href="https://help.edx.org/edxlearner/s/topic/0TOQq0000001UdZOAU/account-basics"
      onClick={[Function]}
      target="_self"
    >
      Want to change your email, name, or password instead?
    </a>
  </p>
  <p>
    <button
      className="btn btn-outline-danger"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      Delete My Account
    </button>
  </p>
</div>
`;

exports[`DeleteAccount should match unverified account section snapshot 1`] = `
<div>
  <h2
    className="section-heading h4 mb-3"
  >
    Delete My Account
  </h2>
  <p>
    We're sorry to see you go!
  </p>
  <p>
    Please note: Deletion of your account and personal data is permanent and cannot be undone. localhost will not be able to recover your account or the data that is deleted.
  </p>
  <p>
    Once your account is deleted, you cannot use it to take courses on localhost.
  </p>
  <p>
    You may also lose access to verified certificates and other program credentials. You can make a copy of these for your records before proceeding with deletion.
  </p>
  <p
    className="text-danger h6"
  >
    Warning: Account deletion is permanent. Please read the above carefully before proceeding. This is an irreversible action, and you will no longer be able to use the same email on localhost.
  </p>
  <p>
    <a
      className="pgn__hyperlink default-link standalone-link"
      href="https://help.edx.org/edxlearner/s/topic/0TOQq0000001UdZOAU/account-basics"
      onClick={[Function]}
      target="_self"
    >
      Want to change your email, name, or password instead?
    </a>
  </p>
  <p>
    <button
      className="btn btn-outline-danger"
      disabled={true}
      onClick={null}
      type="button"
    >
      Delete My Account
    </button>
  </p>
  <div
    className="alert d-flex align-items-start alert-warning mt-n2"
  >
    <div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-triangle-exclamation mr-2"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480L40 480c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </div>
    <div>
      Before proceeding, please 
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="https://support.edx.org/hc/en-us/articles/115000940568-How-do-I-confirm-my-email"
        onClick={[Function]}
        target="_self"
      >
        activate your account
      </a>
      .
    </div>
  </div>
</div>
`;

exports[`DeleteAccount should match unverified account section snapshot 2`] = `
<div>
  <h2
    className="section-heading h4 mb-3"
  >
    Delete My Account
  </h2>
  <p>
    We're sorry to see you go!
  </p>
  <p>
    Please note: Deletion of your account and personal data is permanent and cannot be undone. localhost will not be able to recover your account or the data that is deleted.
  </p>
  <p>
    Once your account is deleted, you cannot use it to take courses on localhost.
  </p>
  <p>
    You may also lose access to verified certificates and other program credentials. You can make a copy of these for your records before proceeding with deletion.
  </p>
  <p
    className="text-danger h6"
  >
    Warning: Account deletion is permanent. Please read the above carefully before proceeding. This is an irreversible action, and you will no longer be able to use the same email on localhost.
  </p>
  <p>
    <a
      className="pgn__hyperlink default-link standalone-link"
      href="https://help.edx.org/edxlearner/s/topic/0TOQq0000001UdZOAU/account-basics"
      onClick={[Function]}
      target="_self"
    >
      Want to change your email, name, or password instead?
    </a>
  </p>
  <p>
    <button
      className="btn btn-outline-danger"
      disabled={true}
      onClick={null}
      type="button"
    >
      Delete My Account
    </button>
  </p>
  <div
    className="alert d-flex align-items-start alert-warning mt-n2"
  >
    <div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-triangle-exclamation mr-2"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480L40 480c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </div>
    <div>
      Before proceeding, please 
      <a
        className="pgn__hyperlink default-link standalone-link"
        href="https://help.edx.org/edxlearner/s/article/How-do-I-link-or-unlink-my-edX-account-to-a-social-media-account"
        onClick={[Function]}
        target="_self"
      >
        unlink all social media accounts
      </a>
      .
    </div>
  </div>
</div>
`;
